--- a/pytomation_web/index.html
+++ b/pytomation_web/index.html
@@ -19,6 +19,7 @@
         <script src="js/iscroll.js" type="text/javascript"></script>
         <script src="js/jquery.mobile.iscrollview.js" type="text/javascript"></script>
 	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript" src="cordova_plugins.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <title>Pytomation - Home Control</title>
     </head>
